[package]
name = "scanner"
version = "0.1.0"
edition = "2024"
license = "MIT"

[profile.dev]
debug = true

[[test]]
name = "integration_test"
path = "tests/integration_test.rs"

[[test]]
name = "band_scanning_test"
path = "tests/band_scanning_test.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
cpal = "0.15"
gag = "1.0"
log = "0.4.27"
phf = { version = "0.11", features = ["macros"] }
rustfft = "6.4.0"
rustradio = { path = "../../rustradio", features = ["soapysdr", "fast-math", "simd"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
soapysdr = "0.4.2"
stderrlog = "0.6.0"
thiserror = "1.0"
tracing = "0.1.40"
tracing-log = "0.2.0" # To bridge log macros to tracing
tracing-subscriber = { version = "0.3.17", features = ["json"] }
tokio = { version = "1", features = ["sync"] }
